<resources>
    <string name="app_name">CalcElectric</string>

    <string name="electricity_output">Electricity Bill Amount: RM %s</string>
    <string name="rebate_output">Rebate amount: RM %s</string>
    <string name="final_cost_output">Final Cost: RM %s</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="programcode">ICT602</string>
    <string name="summary"> This application is a simple application to calculate monthly used on Electric Bill in Malaysia</string>

    <string name="step1"> This Application only work with number no alphabet</string>
    <string name="step2"> Enter Number of kWh </string>
    <string name="step3"> Enter Number of Rebate (0-5%)</string>
    <string name="step4"> Click Button Calculate</string>
    <string name="step5"> Click Button Reset for another calculation</string>
</resources>