<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dip"
    android:layout_marginRight="16dip"
    android:background="@drawable/p9"
    android:paddingRight="16dip"
    tools:context=".InstructionActivity">

    <TextView
        android:id="@+id/step2"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_below="@+id/step1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="199dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:text="@string/step2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/instructiontext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dip"
        android:layout_marginEnd="10dp"
        android:text="INSTRUCTION"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructiontext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="192dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="31dp"
        android:text="@string/step1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/step3"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_below="@+id/step2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="29dp"
        android:text="@string/step3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/step4"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_below="@+id/step3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="43dp"
        android:text="@string/step4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/step5"
        android:layout_width="143dp"
        android:layout_height="80dp"
        android:layout_below="@+id/step4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="41dp"
        android:text="@string/step5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

</RelativeLayout>